--- a/requirements.txt
+++ b/requirements.txt
@@ -8,11 +8,12 @@ deprecation==2.1.0
 distlib==0.3.6; python_version >= "3.7"
 filelock==3.9.0; python_version >= "3.7"
 flask==2.2.2; python_version >= "3.7"
-identify==2.5.13; python_version >= "3.7"
+identify==2.5.15; python_version >= "3.7"
 idna==3.4; python_version >= "3.7" and python_version < "4"
 importlib-metadata==6.0.0; python_version < "3.10" and python_version >= "3.7"
 itsdangerous==2.1.2; python_version >= "3.7"
 jinja2==3.1.2; python_version >= "3.7"
+kafka-python==2.0.2
 markupsafe==2.1.2; python_version >= "3.7"
 nodeenv==1.7.0; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.7.0" and python_version >= "3.7"
 packaging==23.0; python_version >= "3.7"
@@ -20,6 +21,7 @@ platformdirs==2.6.2; python_version >= "3.7"
 pre-commit==2.21.0; python_version >= "3.7"
 pyyaml==6.0; python_version >= "3.7"
 requests==2.28.2; python_version >= "3.7" and python_version < "4"
+structlog==22.3.0; python_version >= "3.7"
 urllib3==1.26.14; python_version >= "3.7" and python_full_version < "3.0.0" and python_version < "4" or python_version >= "3.7" and python_version < "4" and python_full_version >= "3.6.0"
 virtualenv==20.17.1; python_version >= "3.7"
 werkzeug==2.2.2; python_version >= "3.7"
